--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="website icon" type="png" href="teste.png">   
 </head>
 <body>
+<main>
 <h1 class="titulo">filmes</h1>
 <form>
     <input placeholder="Digite o nome do filme" name="pesquisa">
     <button>Pesquisar</button>
 </form>
 <div class="lista"></div>
+</main>
 <script src="main.js"></script>
 </body>
 </html>
