--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teste de api</title>
-    <link rel="website icon" type="png" href="teste.png">   
+    <title>API FILME</title>
+    <link rel="website icon" type="png" href="/Projeto-Api-main/img/logosite.png">   
 </head>
 <body>
+<header>
+    <form>
+        <input placeholder="Digite o nome do filme" name="pesquisa">
+        <button>Pesquisar</button>
+    </form>
+    <nav>
+        <ul>
+            <li><a href="https://github.com/Guilaaa/Projeto-Api" target="_blank"><img src="/Projeto-Api-main/img/githublogo.png" alt="logo_github" class="logos"></a></li>
+            <li><a href="documentacao.html"><img src="/Projeto-Api-main/img/documentologo.png" alt="logo_documento" class="logos" id="documentacao"></a></li>
+        </ul>
+    </nav>
+</header>
 <main>
-<h1 class="titulo">filmes</h1>
-<form>
-    <input placeholder="Digite o nome do filme" name="pesquisa">
-    <button>Pesquisar</button>
-</form>
 <div class="lista"></div>
 </main>
 <script src="main.js"></script>
