--- a/documentacao.html
+++ b/documentacao.html
@@ -5,21 +5,21 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOCUMENTAÇÃO</title>
-    <link rel="website icon" type="png" href="/Projeto-Api-main/img/logosite.png">   
+    <link rel="website icon" type="png" href="logosite.png">   
 </head>
 <body>
     <header id="headDoc">
         <nav>
             <ul class="ulDoc">
-                <li class="liDoc"><a href="https://github.com/Guilaaa/Projeto-Api" target="_blank"><img src="/Projeto-Api-main/img/githublogo.png" alt="logo_github" class="logos"></a></li>
-                <li class="liDoc"><a href="index.html"><img src="/Projeto-Api-main/img/casalogo.png" alt="logo_documento" id="casa"></a></li>
+                <li class="liDoc"><a href="https://github.com/Guilaaa/Projeto-Api" target="_blank"><img src="githublogo.png" alt="logo_github" class="logos"></a></li>
+                <li class="liDoc"><a href="index.html"><img src="casalogo.png" alt="logo_documento" id="casa"></a></li>
             </ul>
         </nav>
     </header>
     <main>
     <div class="docPai">
         <div class="docFil1">
-            <img src="/Projeto-Api-main/img/OMDblogo.png" alt="" width="300px">
+            <img src="OMDblogo.png" alt="" width="300px">
         </div>
         <div class="docFil2">
             <p>&nbsp;&#09;A API OMDb (Open Movie Database), os usuários podem buscar detalhes como títulos, elenco, classificações, pôsteres, enredos e muito mais, tudo de forma fácil e eficiente. É uma ferramenta essencial para criar aplicativos, sites e serviços relacionados ao entretenimento, fornecendo dados precisos e atualizados sobre uma enorme variedade de mídias. <br>&nbsp;&#09;No desenvolvimento com a API OMDb, geralmente são utilizados os métodos HTTP GET para recuperar informações e POST para enviar dados ou realizar operações que exigem modificações no servidor. O método GET é utilizado para solicitar dados específicos, como detalhes de um filme ou uma lista de resultados de pesquisa. Por outro lado, o método POST é utilizado para enviar dados ao servidor, como realizar uma avaliação de um filme ou adicionar uma nova entrada ao banco de dados. <br> &nbsp;&#09;Quanto ao formato de dados, a preferência geralmente recai sobre JSON (JavaScript Object Notation) devido à sua facilidade de leitura e manipulação por parte dos desenvolvedores, bem como a sua leveza e eficiência na transmissão de dados. JSON é amplamente suportado em muitas linguagens de programação e é considerado mais eficiente em termos de desempenho em comparação com XML (eXtensible Markup Language), que é mais verboso e pode ser mais complicado de analisar e manipular.</p>
