--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API FILME</title>
-    <link rel="website icon" type="png" href="/Projeto-Api-main/img/logosite.png">   
+    <link rel="website icon" type="png" href="logosite.png">   
 </head>
 <body>
 <header>
@@ -15,8 +15,8 @@
     </form>
     <nav>
         <ul>
-            <li><a href="https://github.com/Guilaaa/Projeto-Api" target="_blank"><img src="/Projeto-Api-main/img/githublogo.png" alt="logo_github" class="logos"></a></li>
-            <li><a href="documentacao.html"><img src="/Projeto-Api-main/img/documentologo.png" alt="logo_documento" class="logos" id="documentacao"></a></li>
+            <li><a href="https://github.com/Guilaaa/Projeto-Api" target="_blank"><img src="githublogo.png" alt="logo_github" class="logos"></a></li>
+            <li><a href="documentacao.html"><img src="documentologo.png" alt="logo_documento" class="logos" id="documentacao"></a></li>
         </ul>
     </nav>
 </header>
