--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </form>
     <nav>
         <ul>
-            <li><a href="https://github.com/Guilaaa/Projeto-Api" target="_blank"><img src="githublogo.png" alt="logo_github" class="logos"></a></li>
+            <li><a href="https://github.com/GuilhermesSLima/Projeto-Api" target="_blank"><img src="githublogo.png" alt="logo_github" class="logos"></a></li>
             <li><a href="documentacao.html"><img src="documentologo.png" alt="logo_documento" class="logos" id="documentacao"></a></li>
         </ul>
     </nav>
