--- a/documentacao.html
+++ b/documentacao.html
@@ -11,7 +11,7 @@
     <header id="headDoc">
         <nav>
             <ul class="ulDoc">
-                <li class="liDoc"><a href="https://github.com/Guilaaa/Projeto-Api" target="_blank"><img src="githublogo.png" alt="logo_github" class="logos"></a></li>
+                <li class="liDoc"><a href="https://github.com/GuilhermesSLima/Projeto-Api" target="_blank"><img src="githublogo.png" alt="logo_github" class="logos"></a></li>
                 <li class="liDoc"><a href="index.html"><img src="casalogo.png" alt="logo_documento" id="casa"></a></li>
             </ul>
         </nav>
